apps/talos-home/monitoring/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: monitoring
spec:
  type: ClusterIP
  selector:
    prometheus: kube-prometheus-stack-prometheus
  ports:
    - name: http
      port: 9090
      targetPort: 9090
